--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="author" content="Javier Puentes" />
     <meta name="copyright" content="no tenemos copyright" />
     <title>Javier Puentes</title>
-    <script type="module" crossorigin src="/assets/index.7f7f3608.js"></script>
-    <link rel="stylesheet" href="/assets/index.60c35f85.css">
+    <script type="module" crossorigin src="/Portafolio/assets/index.7f7f3608.js"></script>
+    <link rel="stylesheet" href="/Portafolio/assets/index.60c35f85.css">
   </head>
   <body>
     <div id="root"></div>
